--- a/tournament-web-app/src/app/medal-new/medal-new.component.html
+++ b/tournament-web-app/src/app/medal-new/medal-new.component.html
@@ -1,4 +1,4 @@
-<a [routerLink]="'../'">
+<a [routerLink]="'../../'">
     <mat-icon>arrow_back</mat-icon>    
 </a>    
 @if(tournament){
@@ -18,7 +18,14 @@
                 <mat-grid-tile colspan="4">
                     <mat-form-field> 
                         <mat-label>Calificacion mínima</mat-label>
-                        <input matInput placeholder="9.0" formControlName="minGrade">
+                        <mat-select formControlName="minGrade">
+                            @for (g of minGrades; track g) {
+                            <mat-option [value]="g.toFixed(1)">
+                            {{ g }}
+                            </mat-option>                 
+                            }
+                        </mat-select>
+
                         <mat-hint>numero entre 0 y 10</mat-hint>
                     </mat-form-field> 
                 </mat-grid-tile>
