--- a/tournament-web-app/src/app/admin-tournament/admin-tournament.component.html
+++ b/tournament-web-app/src/app/admin-tournament/admin-tournament.component.html
@@ -86,7 +86,13 @@
                                     </mat-form-field> 
                                 </mat-grid-tile>
                             </mat-grid-list>
-                        
+
+                            <mat-grid-tile colspan="5">
+                                <mat-form-field color="accent" appearance="fill">
+                                    <mat-label>Lugar</mat-label>
+                                    <input matInput formControlName="place">
+                                </mat-form-field> 
+                            </mat-grid-tile>                            
                         </mat-card-content>   
                     </mat-card>    
                 </form>            
