--- a/tournament-web-app/src/app/juror-edit/juror-edit.component.html
+++ b/tournament-web-app/src/app/juror-edit/juror-edit.component.html
@@ -23,7 +23,7 @@
         </mat-card-content>
         <mat-card-actions>
             <button mat-button-icon (click)="onSubmit()" [disabled]="!form.valid"><mat-icon>done</mat-icon></button>
-            <a [routerLink]="'/tournament/'+tournamentId">
+            <a [routerLink]="'../../'">
                 <button mat-icon-button><mat-icon>cancel</mat-icon></button>
             </a>        
         </mat-card-actions>
