--- a/tournament-web-app/src/app/medal-edit/medal-edit.component.html
+++ b/tournament-web-app/src/app/medal-edit/medal-edit.component.html
@@ -39,7 +39,7 @@
     </mat-card-content>
     <mat-card-actions>
         <button #edited id="edited" mat-button (click)="onSubmit()" [disabled]="!form.valid"><mat-icon>done</mat-icon></button>
-        <a [routerLink]="'/tournament/'+tournamentId">
+        <a routerLink="../../">
             <button mat-icon-button><mat-icon>cancel</mat-icon></button>
         </a>        
     </mat-card-actions>
