--- a/tournament-web-app/src/app/admin-tournament-setup/admin-tournament-setup.component.html
+++ b/tournament-web-app/src/app/admin-tournament-setup/admin-tournament-setup.component.html
@@ -1,4 +1,6 @@
-<a routerLink="/organizer"><button mat-icon-button><mat-icon>arrow_back</mat-icon></button></a>
+<a routerLink="/">
+    <button mat-icon-button><mat-icon>arrow_back</mat-icon>
+</button></a>
 
 <div class="bar">
 <span>
