--- a/tournament-web-app/src/app/admin-tournament/admin-tournament.component.html
+++ b/tournament-web-app/src/app/admin-tournament/admin-tournament.component.html
@@ -1,4 +1,4 @@
-<a routerLink="/organizer"><button mat-icon-button><mat-icon>arrow_back</mat-icon></button></a>
+<a routerLink="/"><button mat-icon-button><mat-icon>arrow_back</mat-icon></button></a>
 @if( tournament ){
     <div class="bar"></div>
     <h1>{{tournament.label}}</h1>
