Fixing error with logout been called wrongly

--- a/tournament-web-app/src/app/admin-tournament-setup/admin-tournament-setup.component.html
+++ b/tournament-web-app/src/app/admin-tournament-setup/admin-tournament-setup.component.html
@@ -4,7 +4,7 @@
 
 <div class="bar">
 <span>
-    <h1>Torneo initializacion @if(tournament){ {{tournament.label}} }</h1>
+    <h1>Torneo initialización @if(tournament){ {{tournament.label}} }</h1>
 </span>
 <div class="spacer"></div>
 @if( tournamentId && tournament){
