fixing aspect description

--- a/tournament-web-app/src/app/evaluationgrade/description-apply-dlg.html
+++ b/tournament-web-app/src/app/evaluationgrade/description-apply-dlg.html
@@ -1,5 +1,7 @@
 <div mat-dialog-content>
-  <p>{{data.description}}</p>
+  <p>
+    <quill-view-html [content]="data.description"></quill-view-html> 
+  </p>  
 
 </div>
 <div mat-dialog-actions>
