adicionando erro en not found

--- a/tournament-web-app/src/app/guess-tournament/guess-tournament.component.html
+++ b/tournament-web-app/src/app/guess-tournament/guess-tournament.component.html
@@ -75,4 +75,6 @@
         <mat-divider></mat-divider>
     </p>
 }     
-
+@else{
+    <mat-progress-bar mode="indeterminate"></mat-progress-bar>    
+}
