removing cancle button

--- a/tournament-web-app/src/app/category-new/category-new.component.html
+++ b/tournament-web-app/src/app/category-new/category-new.component.html
@@ -16,10 +16,7 @@
             <quill-editor formControlName="description" placeholder="Descripción"></quill-editor>            
         </mat-card-content>
         <mat-card-actions>
-            <button #edited id="edited" mat-button (click)="onSubmit()" [disabled]="!form.valid"><mat-icon>done</mat-icon></button>
-            <a [routerLink]="['../']">
-                <button mat-icon-button><mat-icon>cancel</mat-icon></button>
-            </a>        
+            <button #edited id="edited" mat-button-icon  color="primary" (click)="onSubmit()" [disabled]="!form.valid"><mat-icon>done</mat-icon></button>
         </mat-card-actions>
     </mat-card>   
 }
