--- a/tournament-web-app/src/app/category-edit/category-edit.component.html
+++ b/tournament-web-app/src/app/category-edit/category-edit.component.html
@@ -20,10 +20,7 @@
             <quill-editor formControlName="description" placeholder="Descripción"></quill-editor>            
         </mat-card-content>
         <mat-card-actions>
-            <button mat-button-icon (click)="onSubmit()" [disabled]="!form.valid"><mat-icon>done</mat-icon></button>
-            <a [routerLink]="['../../']">
-                <button mat-icon-button><mat-icon>cancel</mat-icon></button>
-            </a>        
+            <button mat-button-icon color="primary" (click)="onSubmit()" [disabled]="!form.valid"><mat-icon>done</mat-icon></button>     
         </mat-card-actions>
     </mat-card>   
 }
