--- a/tournament-web-app/src/app/evaluation-edit/evaluation-edit.component.html
+++ b/tournament-web-app/src/app/evaluation-edit/evaluation-edit.component.html
@@ -45,10 +45,8 @@
         <mat-card-actions>
             @if( evaluation ){
                 @if( evaluation.aspects.length ){
-                    <button mat-button-icon (click)="onSubmit()" [disabled]="!form.valid"><mat-icon>done</mat-icon></button>
-                    <a [routerLink]="['../']">
-                        <button mat-icon-button><mat-icon>cancel</mat-icon></button>
-                    </a>        
+                    <button mat-button-icon color="primary" (click)="onSubmit()" [disabled]="!form.valid"><mat-icon>done</mat-icon></button>
+   
                 }
             }
         </mat-card-actions>
