--- a/tournament-web-app/src/app/juror-edit/juror-edit.component.html
+++ b/tournament-web-app/src/app/juror-edit/juror-edit.component.html
@@ -22,10 +22,7 @@
             </mat-form-field>   
         </mat-card-content>
         <mat-card-actions>
-            <button mat-button-icon (click)="onSubmit()" [disabled]="!form.valid"><mat-icon>done</mat-icon></button>
-            <a [routerLink]="'../../'">
-                <button mat-icon-button><mat-icon>cancel</mat-icon></button>
-            </a>        
+            <button mat-button-icon color="primary" (click)="onSubmit()" [disabled]="!form.valid"><mat-icon>done</mat-icon></button>     
         </mat-card-actions>
     </mat-card>   
 }
