--- a/tournament-web-app/src/app/juror-new/juror-new.component.html
+++ b/tournament-web-app/src/app/juror-new/juror-new.component.html
@@ -17,10 +17,8 @@
             </mat-form-field>              
         </mat-card-content>
         <mat-card-actions>
-            <button #edited id="edited" mat-button (click)="onSubmit()" [disabled]="!form.valid"><mat-icon>done</mat-icon></button>
-            <a [routerLink]="'../'">
-                <button mat-icon-button><mat-icon>cancel</mat-icon></button>
-            </a>        
+            <button #edited id="edited" mat-button-icon color="primary" (click)="onSubmit()" [disabled]="!form.valid"><mat-icon>done</mat-icon></button>
+       
         </mat-card-actions>
     </mat-card>   
 }
