adding cancel functionaliry

--- a/tournament-web-app/src/app/program-list/program-list.component.css
+++ b/tournament-web-app/src/app/program-list/program-list.component.css
@@ -47,3 +47,9 @@ mat-card{
     margin:5px;
     background-color: yellow;
 }
+.cancel{
+    color:red;
+    font-size: large;
+    margin-left: 1em;
+    margin-right: 1em;
+}
