--- a/tournament-web-app/src/app/performance-edit/performance-edit.component.html
+++ b/tournament-web-app/src/app/performance-edit/performance-edit.component.html
@@ -4,6 +4,9 @@
     <h1>{{ tournament.label }}</h1>
     <mat-card [formGroup]="g">
         <mat-card-header>
+            @if( performance.isCanceled ){
+                <div class="cancel">Status Cancelado</div>
+            }
         </mat-card-header>    
         <mat-card-content>
             <mat-form-field> 
@@ -24,11 +27,11 @@
             </mat-form-field> 
         </mat-card-content>
         <mat-card-actions>
-            @if( performance.isCanceled ){
-                <div class="cancel">Status Cancelado</div>
-            }
-            @else{
+            @if( !performance.isCanceled ){
                 <button mat-raised-button color="warn" (click)="onCancel()">Cancel</button>
+            }
+            @if( isAdmin ){
+                <button mat-icon-button color="primary" (click)="onSubmit()"><mat-icon>done</mat-icon></button>
             }
         </mat-card-actions>
     </mat-card>
