--- a/tournament-web-app/src/app/welcome-juror/welcome-juror.component.html
+++ b/tournament-web-app/src/app/welcome-juror/welcome-juror.component.html
@@ -10,6 +10,9 @@
                     </mat-panel-title>
                     <mat-panel-description>
                         {{ p.performance.fullname }}
+                        @if( p.performance.isCanceled ){
+                            <span class="cancel">Status Cancelado</span>
+                        }                          
                         <span class="medal">{{ p.medal }}</span>
                     </mat-panel-description>
                     </mat-expansion-panel-header>
