--- a/tournament-web-app/src/app/participant-tournament/participant-tournament.component.html
+++ b/tournament-web-app/src/app/participant-tournament/participant-tournament.component.html
@@ -11,10 +11,17 @@
         </mat-grid-tile>
     </mat-grid-list>
 
-    <h2>Mis solicitudes de presentacion</h2>
+    <div class="bar">
+        <h2>Mis solicitudes de presentacion</h2>
+        <span class="spacer"></span>
+        <mat-checkbox [(ngModel)]="isShowDeleted">mostrar borrados</mat-checkbox>
+        <span class="spacer"></span>        
+    </div>
+
     <mat-list>
     @for( p of performances; track p.id){
 
+        @if( !(isShowDeleted==false && p.performance.isDeleted ) ){
             <mat-list-item>
                 <a [routerLink]="['performanceEdit',p.id]">
                     <span>{{ p.performance.label }}</span>
@@ -24,11 +31,18 @@
                     @else{
                         <span class="status">En proceso de aprovacion</span>
                     }
-                    @if( p.performance.isCanceled ){
-                        <span>Cancelado!</span>
+                    @if( p.performance.isDeleted ){
+                        <span>Borrado!</span>
+                    }                    
+                    @else{ 
+                        @if( p.performance.isCanceled ){
+                            <span>Cancelado!</span>
+                        }
                     }
+
                 </a>
             </mat-list-item>
+        }
     } 
     @empty{
         <p>No hay solicitudes de presentacion</p>
