--- a/tournament-web-app/src/app/performance-edit/performance-edit.component.html
+++ b/tournament-web-app/src/app/performance-edit/performance-edit.component.html
@@ -1,5 +1,12 @@
 <a [routerLink]="'../../'"><button mat-icon-button><mat-icon>arrow_back</mat-icon></button></a>
-<h1>Editar performance</h1>    
+<div class="bar">
+    <h1>Editar performance</h1> 
+    <span class="spacer"></span>
+    @if( !isAdmin ){
+        <button mat-icon-button color="warn" (click)="onDelete()"><mat-icon>delete</mat-icon></button>
+    }
+</div>
+
 @if( tournament && performance){
     <h1>{{ tournament.label }}</h1>
     <mat-card [formGroup]="g">
@@ -25,10 +32,18 @@
                     </mat-option>                 
                 </mat-select>
             </mat-form-field> 
+            <mat-form-field> 
+                <mat-label>Academia</mat-label>  
+                <input matInput  formControlName="academy" >
+            </mat-form-field>  
+            <mat-form-field> 
+                <mat-label>Coreografo</mat-label>  
+                <input matInput  formControlName="coreographer" >
+            </mat-form-field>               
         </mat-card-content>
         <mat-card-actions>
             @if( !performance.isCanceled ){
-                <button mat-raised-button color="warn" (click)="onCancel()">Cancel</button>
+                <button mat-raised-button color="warn" (click)="onCancel()">Cancelar</button>
             }
             @if( isAdmin ){
                 <button mat-icon-button color="primary" (click)="onSubmit()"><mat-icon>done</mat-icon></button>
