--- a/tournament-web-app/src/app/performance-new/performance-new.component.html
+++ b/tournament-web-app/src/app/performance-new/performance-new.component.html
@@ -1,4 +1,4 @@
-<a routerLink="'../'"><button mat-icon-button><mat-icon>arrow_back</mat-icon></button></a>
+<a routerLink="../"><button mat-icon-button><mat-icon>arrow_back</mat-icon></button></a>
 <h1>Nuevo performance</h1>    
 @if( tournament ){
     <h1>{{ tournament.label }}</h1>
