--- a/tournament-web-app/src/app/program-list/program-list.component.css
+++ b/tournament-web-app/src/app/program-list/program-list.component.css
@@ -9,6 +9,8 @@ mat-card{
 .label{
     display:block;
     font-size: large;
+    margin-left: 1em;
+    margin-left: 1em;
 }
 .fullname{
     display: block;
