add medal previe

--- a/tournament-web-app/src/app/evaluationgrade-list/evaluationgrade-list.component.html
+++ b/tournament-web-app/src/app/evaluationgrade-list/evaluationgrade-list.component.html
@@ -3,6 +3,7 @@
     
     @if( isAdmin && this.performance.isReleased == false && newGrade > 0){
         <span>Nueva Calificacion :{{ newGrade }}</span>
+        <span>calificacion:{{ getMedal(newGrade) }}</span>
         <button mat-raised-button color="primary" (click)="onRelease()">Liberar Calificacion</button>
     }
 </div>
