--- a/tournament-web-app/src/app/performance-edit/performance-edit.component.html
+++ b/tournament-web-app/src/app/performance-edit/performance-edit.component.html
@@ -50,6 +50,11 @@
                 <input matInput  formControlName="academy" >
             </mat-form-field>  
             <mat-form-field> 
+                <mat-label>Ciudad</mat-label>  
+                <input matInput  formControlName="city" >
+            </mat-form-field>  
+
+            <mat-form-field> 
                 <mat-label>Coreografo</mat-label>  
                 <input matInput  formControlName="coreographer" >
             </mat-form-field>  
