--- a/tournament-web-app/src/app/performance-new/performance-new.component.html
+++ b/tournament-web-app/src/app/performance-new/performance-new.component.html
@@ -11,7 +11,7 @@
                 <input matInput formControlName="label" >
             </mat-form-field>
             <mat-form-field> 
-                <mat-label>Nombre completo del bailarin</mat-label>  
+                <mat-label>Nombre de los ejecutantes</mat-label>  
                 <input matInput  formControlName="fullname" >
             </mat-form-field>             
             <mat-form-field appearance="fill" >
@@ -25,7 +25,11 @@
             <mat-form-field> 
                 <mat-label>Academia</mat-label>  
                 <input matInput  formControlName="academy" >
-            </mat-form-field>  
+            </mat-form-field> 
+            <mat-form-field> 
+                <mat-label>Ciudad</mat-label>  
+                <input matInput  formControlName="city" >
+            </mat-form-field>              
             <mat-form-field> 
                 <mat-label>Coreografo</mat-label>  
                 <input matInput  formControlName="coreographer" >
