--- a/tournament-web-app/src/app/home/home.component.html
+++ b/tournament-web-app/src/app/home/home.component.html
@@ -1,34 +1,31 @@
 
 <mat-card class="example-card">
     <mat-card-header>
-      <div mat-card-avatar class="example-header-image"></div>
-      <mat-card-title>MisCompetencias</mat-card-title>
-      <mat-card-subtitle>Site especializado en competencias de apreciacion</mat-card-subtitle>
+        <mat-card-title-group>
+            <mat-card-title>MisCompetencias</mat-card-title>
+            <mat-card-subtitle>Site especializado en competencias de apreciacion</mat-card-subtitle>
+            <img mat-card-lg-image src="/assets/medals.jpg" alt="miscompetencias">
+        </mat-card-title-group>
     </mat-card-header>
-    <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
+    
     <mat-card-content>
      
         <p>
-            En <b>MIS COMPETENCIAS.COM</b>, nos enorgullece proporcionar una plataforma integral para la planificación y evaluación de concursos, competencias y torneos. Nuestra finalidad es facilitar la organización y ejecución de eventos de manera eficiente, asegurando una experiencia sin complicaciones tanto para los organizadores como para los participantes
+            En <b>MIS COMPETENCIAS.COM</b>, nos enorgullece proporcionar una plataforma integral para la automatizacion de evaluaciónes de concursos, competencias y torneos. Nuestra finalidad es facilitar la organización y ejecución de eventos de manera eficiente, asegurando una experiencia sin complicaciones tanto para los organizadores como para los participantes
         </p>
 
-        <h1>Misión:</h1>
-
-        <p>
-        Nuestra misión en <b>MISCOMPETENCIAS.COM</b> es impulsar el éxito de cada evento, brindando herramientas poderosas y fáciles de usar que optimicen la gestión, la participación y la evaluación. Nos esforzamos por ofrecer una solución innovadora que promueva la equidad, la transparencia y el crecimiento en cada competencia que se lleve a cabo a través de nuestra plataforma  
-        </p>
-
-        <h3>Objetivos:</h3>
+        <h3>Que puedes realizar en MisCompetencias.com:</h3>
         <mat-list role="list">
-            <mat-list-item role="listitem">Simplicidad y Usabilidad: Nos comprometemos a diseñar una interfaz intuitiva que simplifique el proceso de planificación y evaluación, haciendo que la gestión de eventos sea accesible para todos.</mat-list-item>
-            <mat-list-item role="listitem">Eficiencia y Automatización: Buscamos automatizar tareas repetitivas y tediosas, permitiendo a los organizadores enfocarse en la creatividad y la calidad del evento.</mat-list-item>
-            <mat-list-item role="listitem">Transparencia y Equidad: Promovemos la transparencia en la evaluación y la equidad en las competencias, asegurando un ambiente justo para todos los participantes.</mat-list-item>
-            <mat-list-item role="listitem">Colaboración y Comunidad: Fomentamos la colaboración entre organizadores, participantes y espectadores, creando una comunidad entusiasta en torno a cada evento.</mat-list-item>
-            <mat-list-item role="listitem">Innovación y Adaptabilidad: Nos comprometemos a estar a la vanguardia de la tecnología, ofreciendo constantemente nuevas características y mejoras para satisfacer las necesidades cambiantes de nuestra comunidad de usuarios.</mat-list-item>
+            <mat-list-item role="listitem">Crear mis propios eventos y premios.</mat-list-item>
+            <mat-list-item role="listitem">Crear un link de invitacion para mis participantes.</mat-list-item>
+            <mat-list-item role="listitem">Aceptar o rechazar propuesta de participacion.</mat-list-item>
+            <mat-list-item role="listitem">Crear y asignar criterios de calificacion para mis jueces.</mat-list-item>
+            <mat-list-item role="listitem">Recibir calificaciones de mis jueces y promediar automaticamente.</mat-list-item>
+            <mat-list-item role="listitem">Asignacion automatica de lugares y premios.</mat-list-item>
         </mat-list>
     </mat-card-content>
 
-    <p>En <b>MISCOMPETENCIAS.COM</b>, estamos dedicados a hacer que cada evento sea un éxito. Únete a nosotros en (este espacio) nuestro espacio (camino) para transformar la forma en que se planifican y evalúan concursos, competencias y torneos en todo el mundo.</p>
+    <p>En <b>MISCOMPETENCIAS.COM</b>, estamos dedicados a hacer que cada evento sea un éxito. Únete a nosotros en nuestro espacio para transformar la forma en que se planifican y evalúan concursos, competencias y torneos en todo el mundo.</p>
 
     <p>
         ¡Descubre el poder de MISCOMPETENCIAS.COM hoy mismo!        
