using small image

--- a/tournament-web-app/src/app/home/home.component.html
+++ b/tournament-web-app/src/app/home/home.component.html
@@ -4,7 +4,7 @@
         <mat-card-title-group>
             <mat-card-title>MisCompetencias</mat-card-title>
             <mat-card-subtitle>Site especializado en competencias de apreciacion</mat-card-subtitle>
-            <img mat-card-lg-image src="/assets/medals.jpg" alt="miscompetencias">
+            <img mat-card-lg-image src="/assets/medals_640.jpg" alt="miscompetencias">
         </mat-card-title-group>
     </mat-card-header>
     
